--- a/src/main/resources/com/example/autorideapp/edit-car-view.fxml
+++ b/src/main/resources/com/example/autorideapp/edit-car-view.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <AnchorPane xmlns="http://javafx.com/javafx/17.0.12"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.autorideapp.autoride.EditCarController"
